--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ h1, footer {
   height: 200px;
   border: 1px solid black;
   margin: 100px;
+  box-shadow: 5px 5px 5px 5px lightgray;
 }
 
 .flag #top {
