added potential feature comment

--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ h1, footer {
 
 
 
-
+/* Extension idea to include animated text showing name of country with flags */
 footer {
   position: sticky;
 }
